<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <ImageView android:id="@+id/iv_about_app_icon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="80dp"
               android:src="@drawable/icon"/>

    <TextView
            android:id="@+id/tv_about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_below="@+id/iv_about_app_icon"
            android:textColor="@color/Grey"
            android:textSize="@dimen/font_size_large"
            android:text="@string/app_name"/>

    <TextView
            android:id="@+id/tv_about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_app_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/DarkGrey"
            android:textSize="@dimen/font_size_small"
            android:text="@string/app_version"/>


	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true"
			android:layout_margin="10dp"
			android:textColor="@color/DarkGrey"
			android:textSize="@dimen/font_size_default"
			android:text="@string/app_copyright"/>

</RelativeLayout>