<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/tool_bar"
            android:gravity="center"
            android:textColor="@color/Grey"
            android:textSize="@dimen/font_size_large"
            android:text="@string/lint_sys_info_nav_title"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                  android:text="@string/lint_sys_info_basic"
                  android:textColor="@color/DeepSkyBlue"
                  android:textSize="@dimen/font_size_large"
                  android:background="@drawable/textfield_bg_def_holo_light"/>
        <ListView android:id="@+id/lv_sys_info_basic"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="0.4"
                  android:cacheColorHint="@android:color/transparent"
                  android:scrollbars="none"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                  android:text="@string/lint_sys_info_service"
                  android:textColor="@color/DeepSkyBlue"
                  android:textSize="@dimen/font_size_large"
                  android:background="@drawable/textfield_bg_def_holo_light"/>

        <ListView android:id="@+id/lv_sys_info_service"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="0.4"
                  android:cacheColorHint="@android:color/transparent"
                  android:scrollbars="none"/>


    </LinearLayout>


</LinearLayout>